--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -33,5 +33,5 @@
     "noImplicitReturns": true, // 并不是所有函数里的代码都有返回值时，抛出错误
     "noFallthroughCasesInSwitch": true // 报告 switch 语句的 fallthrough 错误。（即，不允许 switch 的 case 语句贯穿）
   },
-  "include": ["src"]
+  "include": ["src", "types"]
 }
