--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "patch-package": "^8.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.5.1"
+    "react-icons": "^5.5.0",
+    "react-router": "^7.5.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
