--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@types/node": "^22.14.1",
     "antd": "^5.24.7",
+    "framer-motion": "^12.10.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.1",
     "zustand": "^5.0.3"
