--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@faker-js/faker": "^9.8.0",
     "@types/node": "^22.14.1",
     "antd": "^5.24.7",
+    "axios": "^1.9.0",
     "framer-motion": "^12.10.4",
+    "msw": "^2.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet-async": "^2.0.5",
@@ -42,5 +45,10 @@
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.1"
   },
-  "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
+  "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1",
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
+  }
 }
