--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@faker-js/faker": "^9.8.0",
     "@types/node": "^22.14.1",
+    "ahooks": "^3.8.5",
     "antd": "^5.24.7",
     "axios": "^1.9.0",
     "framer-motion": "^12.10.4",
     "msw": "^2.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.1",
     "zustand": "^5.0.3"
