--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@ant-design/x": "^1.4.0",
     "@faker-js/faker": "^9.8.0",
     "@types/node": "^22.14.1",
     "ahooks": "^3.8.5",
