--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-VITE_APP_BASE_API=http://localhost:3000
+VITE_APP_BASE_API=http://localhost:5173/api
 VITE_APP_HOMEPAGE=/user-management/user
-VITE_APP_BASE_PATH=/
+VITE_APP_BASE_PATH=
 
