--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.1",
+    "swr": "^2.3.6",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
